# django-async-views

./: pyproject.toml
core/: settings.py  urls.py  views.py
movie/: models.py
movie/migrations/: 0001_initial.py
story/: models.py
story/migrations/: 0001_initial.py
