[tool.poetry]
name = "async-views"
version = "0.1.0"
description = ""
authors = ["Bruno Fioreze"]
readme = "README.md"
packages = [{include = "async_views"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
